--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -443,3 +443,28 @@ h1.page-title {
   margin-left: -10px;
   margin-top: -4px;
 }
+
+.navbar-z-index{
+  z-index:1 !important;
+}
+
+//calendar
+.vdatetime-popup__header {
+  padding: 20px 50px !important;
+  background: $secondary !important;
+  color: $light;
+}
+
+.vdatetime-calendar__month__day--selected > span > span {
+  background: $secondary !important;
+  color: $light;
+}
+
+.vdatetime-time-picker__item--selected {
+  color: $secondary !important;
+}
+
+.vdatetime-popup__actions__button {
+  font-size: 20px !important;
+  color: $secondary !important;
+}
