Fix to Bootstrap range styles

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -104,6 +104,18 @@ $custom-control-indicator-active-bg: #b9d6fb;
 $custom-control-indicator-bg: white;
 
 
+////custom range
+
+//Thumb background color
+$custom-range-thumb-bg: #0070ff;
+
+//Thumb background color when being clicked
+$custom-range-thumb-active-bg: #aad1ff;
+
+//Track background color
+$custom-range-track-bg: #d9dee2;
+
+
 //footer
 $footer-text: white;
 
