Remove Active color setting #1937

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -34,9 +34,9 @@ html {
   }
 }
 
-.active {
-  color: $primary;
-}
+// .active {
+//   color: $primary;
+// }
 
 .breadcrumb {
   font-size: 0.875em;
