--- a/resources/sass/sidebar/sidebar.scss
+++ b/resources/sass/sidebar/sidebar.scss
@@ -42,21 +42,14 @@
     margin-bottom: 24px;
   }
 
-  .logo-closed {
-    display: none;
-  }
-
   .nav-item:hover {
-    background-color: rgba(255, 255, 255, .3);
+    background-color: $hover;
   }
   .nav-icon { min-width: 24px; font-size: 18px}
 }
 
 #sidebar .closed {
-  .section {
-    display: none;
-  }
-
+  
   .nav-item {
     text-align: center;
   }
@@ -66,12 +59,7 @@
     color: $light;
   }
 
-  .logo {
-    display: none;
-  }
-
   .logo-closed {
-    display: block;
     margin: 16px auto;
     margin-bottom: 24px;
   }
@@ -83,10 +71,7 @@
   }
 
   .nav-item:hover {
-    background-color: rgba(255, 255, 255, .3);
+    background-color: $hover;
   }
 
-  .nav-text {
-    display: none;
-  }
 }
