Fix checkmark color in checkbox when using b-form-checkbox

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -89,9 +89,9 @@ $table-border-color: $grey-bg !default;
 //
 
 ////checkbox
+$custom-control-indicator-checked-color: #ffffff;
 $custom-checkbox-indicator-indeterminate-bg: #788793;
 $custom-checkbox-indicator-indeterminate-color: #ffffff;
-
 
 ////custom switch
 
