css genearations with fonts distributed in the public directory

--- a/resources/sass/_colors.scss
+++ b/resources/sass/_colors.scss
@@ -1,9 +1,10 @@
 // Changing the theme colors
-$primary: #ff0000;
-$secondary: #ff0000;
-$success: #ff0000;
-$info: #ff0000;
-$warning: #ff0000;
-$danger: #ff0000;
-$light: #ff0000;
+$primary: #3397e1;
+$secondary: #788793;
+$success: #00bf9c;
+$info: #17a2b8;
+$warning: #fbbe02;
+$danger: #ed4757;
+$light: #ffffff;
+
 
