--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,9 @@
 // Variables
 @import 'variables';
 
+// Font
+@import 'fonts';
+
 @import '../../public/css/precompiled/bootstrap/bootstrap.scss';
 
 //// Font Awesome
