--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,11 +1,13 @@
 @import 'colors';
 
+@import 'fonts';
+
 // Changing the body background and text
 $body-bg: #f7f9fb;
 
 // Fonts
 
-$font-family-sans-serif: 'Open Sans' !default;
+//$font-family-sans-serif: 'Open Sans' !default;
 $font-family-serif: Georgia, 'Times New Roman', Times, serif !default;
 
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
