--- a/resources/sass/_colors.scss
+++ b/resources/sass/_colors.scss
@@ -1,5 +1,5 @@
-// Changing the theme colors
-$primary: #a32a0f;
+// Changed theme colors
+$primary: #3397e1;
 $secondary: #788793;
 $success: #00bf9c;
 $info: #17a2b8;
