--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,7 +8,7 @@ $body-bg: #f7f9fb;
 // Fonts
 
 //$font-family-sans-serif: 'Open Sans' !default;
-$font-family-serif: Georgia, 'Times New Roman', Times, serif !default;
+//$font-family-serif: Georgia, 'Times New Roman', Times, serif !default;
 
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace: Menlo, Monaco, Consolas, 'Courier New', monospace !default;
