--- a/resources/sass/_fonts.scss
+++ b/resources/sass/_fonts.scss
@@ -1,3 +1,3 @@
-//change of fonts
-
-$font-family-sans-serif: 'Arial' !default;
+// Changed theme fonts
+$font-family-sans-serif: {"id":"Arial","title":"Arial"};
+$font-family-serif: {"id":"Arial","title":"Arial"};
