--- a/resources/sass/_fonts.scss
+++ b/resources/sass/_fonts.scss
@@ -1,3 +1,3 @@
 // Changed theme fonts
-$font-family-sans-serif: 'Open Sans' !default !default;
-$font-family-serif: Georgia, 'Times New Roman', Times, serif !default !default;
+$font-family-sans-serif: 'Open Sans' !default;
+$font-family-serif: Georgia, 'Times New Roman', Times, serif !default;
