--- a/resources/sass/sidebar/sidebar.scss
+++ b/resources/sass/sidebar/sidebar.scss
@@ -5,11 +5,11 @@
   min-width: 58px;
   background-color: $primary;
   overflow-y: auto;
-  
+
   #custom_icon{
       max-width: 24px;
       max-height:22px;
-      min-width: 24px; 
+      min-width: 24px;
     }
 
   &.expanded {
@@ -18,7 +18,7 @@
     #custom_icon{
       max-width: 24px;
       max-height:24px;
-      min-width: 24px; 
+      min-width: 24px;
       margin-right: 7px;
       margin-left: -3px;
     }
@@ -42,6 +42,11 @@
     margin-bottom: 24px;
   }
 
+  .logo img {
+    height: 26px;
+    width: 146px;
+  }
+
   .nav-item:hover {
     background-color: $hover;
   }
@@ -49,7 +54,7 @@
 }
 
 #sidebar .closed {
-  
+
   .nav-item {
     text-align: center;
   }
