Adding dark variable

--- a/resources/sass/admin/queues.scss
+++ b/resources/sass/admin/queues.scss
@@ -34,7 +34,7 @@ $black:    #000 !default;
 //$warning:       $yellow !default;
 //$danger:        $red !default;
 //$light:         $gray-100 !default;
-$dark:          $gray-800 !default;
+//$dark:          $gray-800 !default;
 
 
 
