--- a/resources/sass/_colors.scss
+++ b/resources/sass/_colors.scss
@@ -1,8 +1,9 @@
 // Changed theme colors
-$primary: #3397e1;
+$primary: #3397E1;
 $secondary: #788793;
-$success: #00bf9c;
-$info: #17a2b8;
-$warning: #fbbe02;
-$danger: #ed4757;
-$light: #ffffff;
+$success: #00BF9C;
+$info: #17A2B8;
+$warning: #FBBE02;
+$danger: #ED4757;
+$dark: #000000;
+$light: #FFFFFF;
