Change breadcrumbs to use display flex

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -43,6 +43,8 @@ html {
 
 .breadcrumb {
   font-size: 0.875em;
+  margin-bottom: 0;
+  border-bottom: 0;
 }
 
 .navbar-light .navbar-nav .show > .nav-link,
