remove unused import scss

--- a/resources/sass/abeColors.scss
+++ b/resources/sass/abeColors.scss
@@ -1,11 +1,11 @@
+// Custom UI Colors
 @import 'colors';
+
 // Bootstrap 
 @import '../../public/css/precompiled/bootstrap/functions';
 @import '../../public/css/precompiled/bootstrap/variables';
 @import '../../public/css/precompiled/bootstrap/mixins';
-// @import '../../public/css/precompiled/bootstrap/root';
 @import '../../public/css/precompiled/bootstrap/buttons';
-
 
 // Variables
 @import 'variables';
