--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -55,14 +55,14 @@ html {
 }
 
 .nav-badge {
-  background: fade-out(darken($primary, 20%), .5);
-  border: 1px solid fade-out($light, .5);
+  background: fade-out(darken($primary, 20%), 0.5);
+  border: 1px solid fade-out($light, 0.5);
   border-radius: 3px;
   font-size: 0.85em;
   font-weight: bold;
   margin-top: -1px;
   padding: 2px 5px;
-  text-shadow: 1px 1px fade-out(darken($primary, 20%), .5);
+  text-shadow: 1px 1px fade-out(darken($primary, 20%), 0.5);
 }
 
 .actions .popout {
@@ -371,10 +371,6 @@ h1.page-title {
 // API error template
 #api-error {
   display: none;
-}
-
-.list-group {
-  width: 300px;
 }
 
 .error-content {
