Improving categorized resource tabs

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -37,6 +37,11 @@ html {
   }
 }
 
+.nav-tabs .nav-item.active {
+    background: white;
+    border-bottom: 0;
+}
+
 // .active {
 //   color: $primary;
 // }
