Changing system-wide colors

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -71,8 +71,8 @@ $pagination-bg: $body-bg;
 $pagination-border-width: 0px;
 
 //tooltip
-$tooltip-bg: white;
-$tooltip-color: $secondary;
+$tooltip-bg: $secondary;
+$tooltip-color: white;
 
 //breadcrumbs
 // $breadcrumb-active-color: $primary;
